Corrections divers dark mode

--- a/src/css/dark_theme/forum.less
+++ b/src/css/dark_theme/forum.less
@@ -49,6 +49,7 @@ h2 {
 
 h3 {
   color: #CCCCCC;
+  border-bottom-color: #CCCCCC;
 }
 
 hr {
