--- a/src/css/dark_theme/general.less
+++ b/src/css/dark_theme/general.less
@@ -21,6 +21,10 @@
   background-color: var(--dark-20);
 }
 
+.hover\:bg-bga-gray-233:hover {
+  background-color: var(--dark-30);
+}
+
 .text-bga-gray-78 {
   color: var(--light-70);
 }
@@ -2339,6 +2343,15 @@ svg.bga-tournament-list-item__pointer polygon {
 
 .bga-tournament-list-item__bottom {
   filter: var(--ext-bright);
+}
+
+/* new tournament page */
+
+.bgaext_newtournament {
+  .carousel__item svg {
+    color: #000;
+    filter: invert(1);
+  }
 }
 
 /* audience */
