--- a/src/css/options-common.css
+++ b/src/css/options-common.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-flow: column;
   border: 1px solid #000;
-  border-radius: 4px;
+  border-radius: 8px;
   padding: 1.2em;
   margin-top: 0.5em;
   box-sizing: border-box;
@@ -196,6 +196,7 @@
   color: #009e0a;
 }
 
-.flags, .flags>option {
+.flags,
+.flags>option {
   font-family: "Twemoji Country Flags", serif;
 }
